separated sections of activites and linked the pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a href="index3.html"><i class="fa fa-fire"></i> Contact</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-envelope"></i> Activities</a>
+                        <a href="index2.html"><i class="fa fa-envelope"></i> Activities</a>
                     </li>
                 </ul>
             </div>
