--- a/index4.html
+++ b/index4.html
@@ -24,7 +24,7 @@
             <nav class="codrops-demos">
                 <a href="index.html">Home</a>
                 <a href="index3.html">Contact</a>
-                <a href="#">Activities</a>
+                <a href="index2.html">Activities</a>
             </nav>
         </header>
         <div class="content">
