--- a/index3.html
+++ b/index3.html
@@ -37,7 +37,7 @@
                         <a href="index4.html"><i class="fa fa-fire"></i> Portfolio</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-envelope"></i> Activities</a>
+                        <a href="index2.html"><i class="fa fa-envelope"></i> Activities</a>
                     </li>
                 </ul>
             </div>
