made the image and text responsive

--- a/index4.html
+++ b/index4.html
@@ -22,7 +22,7 @@
         <header class="codrops-header">
             <h1>Portfolio</h1>
             <nav class="codrops-demos">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
                 <a class="current-demo" href="index4.html">Portfolio</a>
