--- a/index.html
+++ b/index.html
@@ -4,14 +4,66 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="Tonny" content="text">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Vicki</title>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
+    <!-------------------------------NAVIGATON---------------------->
 
+    <nav class="nav ">
+        <div class="nav-center">
+            <a class="toggle-nav" href="#">&#9776;</a>
+
+            <div class="nav-mobile">
+                <ul class="left">
+                    <!--                    <li><a href="#"><i class="fa fa-home"></i> Home</a></li>-->
+                    <!--                    <li><a href="#"><i class="fa fa-book"></i> About</a></li>-->
+
+                </ul>
+                <ul class="right">
+                    <li>
+                        <a href="index4.html"><i class="fa fa-user"></i>Portfolio </a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-fire"></i> Contact</a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-envelope"></i> Activities</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-------------------------END OF NAVIGATION-------------->
+
+
+
+    <!------------------  FIRST SECTION-------------------->
+
+    <section id="first">
+
+        <div class="row medium-uncollapse large-collapse">
+            <div class="small-6 columns home">
+                <img src="img/glamour.jpg">
+            </div>
+            <div class="small-6 columns">
+                <p>
+                    Since January 2006, Copyblogger has been teaching people how to create killer online content. Not bland corporate crap created to fill up a company webpage. Valuable information that attracts attention, drives traffic, and builds your business.
+                </p>
+            </div>
+        </div>
+
+    </section>
+
+
+    <!---------    END OF FIRST SECTION----------------->
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
