--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/app.css">
+
 </head>
 
 <body>
@@ -47,14 +48,14 @@
 
     <!------------------  FIRST SECTION-------------------->
 
-    <section id="first">
+    <section id="first parent">
 
         <div class="row medium-uncollapse large-collapse">
-            <div class="small-6 columns home">
-                <img src="img/glamour.jpg">
+            <div class="small-6 columns home child">
+                <img src="img/glamour.jpg" class="child">
             </div>
-            <div class="small-6 columns">
-                <p>
+            <div class="small-6 columns child">
+                <p class="child">
                     Since January 2006, Copyblogger has been teaching people how to create killer online content. Not bland corporate crap created to fill up a company webpage. Valuable information that attracts attention, drives traffic, and builds your business.
                 </p>
             </div>
@@ -64,6 +65,21 @@
 
 
     <!---------    END OF FIRST SECTION----------------->
+    <script>
+        setTimeout(function (i) {
+            showElements($('#parent'));
+        }, 5000);
+
+        function showElements(element) {
+            element.children('div').each(function () {
+                        if ($(this).is(':hidden')) {
+                            $(this).fadeIn();
+                            setTimeout(function () {
+                                showElements(element)
+                            }, 5000);
+                            return false;
+                        }
+    </script>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
