Added nav bar on contact page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a href="index4.html"><i class="fa fa-user"></i>Portfolio </a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-fire"></i> Contact</a>
+                        <a href="index3.html"><i class="fa fa-fire"></i> Contact</a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-envelope"></i> Activities</a>
