--- a/index4.html
+++ b/index4.html
@@ -23,9 +23,7 @@
             <h1>Portfolio</h1>
             <nav class="codrops-demos">
                 <a href="index.html">Home</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-                <a class="current-demo" href="index4.html">Portfolio</a>
+                <a href="index3.html">Contact</a>
                 <a href="#">Activities</a>
             </nav>
         </header>
