made the contact form a bit responsive

--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="large-6 columns">
                 <p>
-                    I am a proffesional actress taking par in several plays, live perfomances, tv shows and also Kenyan and international Movies .
+                    I am a proffesional actress taking part in several plays, live perfomances, tv shows and also Kenyan and international Movies .
                 </p>
             </div>
             <div class="large-6 columns">
