--- a/index3.html
+++ b/index3.html
@@ -58,7 +58,7 @@
             <div class="small-6 columns">
                 <div id="demo">
 
-                    <p class="padabove">
+                    <p>
                         Fell free to drop me a message any time, promise to reply back
                     </p>
 
@@ -75,7 +75,7 @@
                 <div id="contact-wrap">
                     <div id="contact-area">
 
-                        <form method="post" action="contactengine.php">
+                        <form method="post">
 
 
                             <input type="text" name="Name" id="Name" placeholder="Full Name" />
