--- a/index2.html
+++ b/index2.html
@@ -91,7 +91,7 @@
             </div>
             <div class="large-6 columns">
                 <p>
-                    I am n event organizer, am right to say I offer the best event organizer services from the feedback I get from my clinets .
+                    I am an event organizer, am right to say I offer the best event organizing services from the feedback I get from my clinets that i have worked for.
                 </p>
             </div>
         </div>
